// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/View default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
<<<<<<< HEAD
    className="sc-daURTG jDLWBk"
  >
    <div>
      <div
        className="sc-fBuWsC jtIdEp"
=======
    className="sc-lkqHmb eBNOfp"
  >
    <div>
      <div
        className="sc-dnqmqq jTyMZw"
>>>>>>> updated tests
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
<<<<<<< HEAD
              className="sc-fMiknA bxZCMx"
=======
              className="sc-iwsKbI jQhHGA"
>>>>>>> updated tests
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
<<<<<<< HEAD
            className="sc-dVhcbM fghLuF"
          >
            <div
              className="sc-fMiknA bxZCMx"
=======
            className="sc-gZMcBi giNnHm"
          >
            <div
              className="sc-iwsKbI jQhHGA"
>>>>>>> updated tests
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <div
<<<<<<< HEAD
            className="sc-eqIVtm jwtJAm"
          >
            <ul
              className="sc-fAjcbJ sc-caSCKo jdlBiQ"
            >
              <li
                className="sc-kjoXOD sc-cHGsZl MsFPR"
=======
            className="sc-gqjmRU kteaYt"
          >
            <ul
              className="sc-VigVT sc-jTzLTM jjONle"
            >
              <li
                className="sc-jzJRlG sc-cSHVUG skFeT"
>>>>>>> updated tests
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
<<<<<<< HEAD
              className="sc-fAjcbJ sc-gisBJw TKJlq"
            >
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
              className="sc-VigVT sc-fjdhpX dhPcNY"
            >
              <li
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
<<<<<<< HEAD
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
<<<<<<< HEAD
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
<<<<<<< HEAD
        className="sc-bXGyLb gDJSEE"
      >
        <ul
          className="sc-dUjcNx boMleI"
        >
          <li
            className="sc-gHboQg icolga"
=======
        className="sc-kIPQKe jgMiIX"
      >
        <div
          className="sc-kfGgVZ gAmGXc"
        >
          <a
            active={true}
            className="sc-esjQYD dkvrVo"
            href="/project/100"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
          <a
            active={false}
            className="sc-esjQYD kjsANz"
            href="/project/100/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
          <a
            active={false}
            className="sc-esjQYD kjsANz"
            href="/project/100/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
      </div>
      <div
        className="sc-eLExRp BSmTv"
      >
        <ul
          className="sc-eilVRo kRPJTI"
        >
          <li
            className="sc-eerKOB krqCxU"
>>>>>>> updated tests
          >
            <div
              id="projectDataSources"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
<<<<<<< HEAD
                  className="sc-eilVRo yzSqE"
=======
                  className="sc-emmjRN icvTHg"
>>>>>>> updated tests
                >
                  Data Sources
                </span>
              </div>
              <span
<<<<<<< HEAD
                className="sc-eerKOB fnhugY"
=======
                className="sc-cpmLhU biBIrw"
>>>>>>> updated tests
                id="projectDataSourcesValue"
              >
                3
              </span>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-gHboQg icolga"
=======
            className="sc-eerKOB krqCxU"
>>>>>>> updated tests
          >
            <div
              id="projectUsers"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
<<<<<<< HEAD
                  className="sc-eilVRo yzSqE"
=======
                  className="sc-emmjRN icvTHg"
>>>>>>> updated tests
                >
                  Users
                </span>
              </div>
              <span
<<<<<<< HEAD
                className="sc-eerKOB fnhugY"
=======
                className="sc-cpmLhU biBIrw"
>>>>>>> updated tests
                id="projectUsersValue"
              >
                2
              </span>
            </div>
          </li>
        </ul>
        <ul
<<<<<<< HEAD
          className="sc-lkqHmb eYWCqt"
        >
          <li
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldLastUpdated"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
          className="sc-cbkKFq cqfEyc"
        >
          <li
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldLastUpdated"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldLastUpdatedLabel"
              >
                Last Update
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldLastUpdatedValue"
              >
                3 months ago
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldLastUpdatedEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldStatus"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldStatus"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldStatusLabel"
              >
                Status
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldStatusValue"
              >
                Status
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldStatusEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldOwner"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldOwner"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldOwnerLabel"
              >
                Owner
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldOwnerValue"
              >
                Firstname Lastname
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldOwnerEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldTitle"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldTitle"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldTitleLabel"
              >
                Title
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldTitleValue"
              >
                Project Name
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldTitleEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldDescription"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldDescription"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldDescriptionLabel"
              >
                Description
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldDescriptionValue"
              >
                Description
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldDescriptionEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
<<<<<<< HEAD
            className="sc-eLExRp cMTCDm"
          >
            <div
              className="sc-cbkKFq jomvma"
              id="fieldSlug"
            >
              <span
                className="sc-krvtoX dvjgqz"
=======
            className="sc-krvtoX cGQXwz"
          >
            <div
              className="sc-fYiAbW jzgIXq"
              id="fieldSlug"
            >
              <span
                className="sc-fOKMvo hQbnzM"
>>>>>>> updated tests
                id="fieldSlugLabel"
              >
                API
              </span>
              <span
<<<<<<< HEAD
                className="sc-fOKMvo cWOFDY"
=======
                className="sc-gHboQg jUcHTK"
>>>>>>> updated tests
                id="fieldSlugValue"
              >
                schemacms/api/project_title
              </span>
            </div>
            <div
<<<<<<< HEAD
              className="sc-fYiAbW gAKdfL"
=======
              className="sc-dUjcNx VSZPP"
>>>>>>> updated tests
              id="fieldSlugEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sc-bZQynM ceQpbG"
    >
      <div
        className="sc-htoDjs gGzkjf"
      >
        <div
          className="sc-gzVnrw dUJElp"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/View loading 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
<<<<<<< HEAD
    className="sc-daURTG jDLWBk"
  >
    <div>
      <div
        className="sc-fBuWsC jtIdEp"
=======
    className="sc-lkqHmb eBNOfp"
  >
    <div>
      <div
        className="sc-dnqmqq jTyMZw"
>>>>>>> updated tests
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
<<<<<<< HEAD
              className="sc-fMiknA bxZCMx"
=======
              className="sc-iwsKbI jQhHGA"
>>>>>>> updated tests
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
<<<<<<< HEAD
            className="sc-dVhcbM fghLuF"
          >
            <div
              className="sc-fMiknA bxZCMx"
=======
            className="sc-gZMcBi giNnHm"
          >
            <div
              className="sc-iwsKbI jQhHGA"
>>>>>>> updated tests
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <div
<<<<<<< HEAD
            className="sc-eqIVtm jwtJAm"
          >
            <ul
              className="sc-fAjcbJ sc-caSCKo jdlBiQ"
            >
              <li
                className="sc-kjoXOD sc-cHGsZl MsFPR"
=======
            className="sc-gqjmRU kteaYt"
          >
            <ul
              className="sc-VigVT sc-jTzLTM jjONle"
            >
              <li
                className="sc-jzJRlG sc-cSHVUG skFeT"
>>>>>>> updated tests
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
<<<<<<< HEAD
              className="sc-fAjcbJ sc-gisBJw TKJlq"
            >
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
              className="sc-VigVT sc-fjdhpX dhPcNY"
            >
              <li
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
<<<<<<< HEAD
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
<<<<<<< HEAD
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
=======
                className="sc-jzJRlG sc-kAzzGY kVJbvT"
>>>>>>> updated tests
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
<<<<<<< HEAD
        className="sc-VigVT igYVnG"
=======
        className="sc-kIPQKe jgMiIX"
      >
        <div
          className="sc-kfGgVZ gAmGXc"
        >
          <a
            active={true}
            className="sc-esjQYD dkvrVo"
            href="/project/100"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
          <a
            active={false}
            className="sc-esjQYD kjsANz"
            href="/project/100/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
          <a
            active={false}
            className="sc-esjQYD kjsANz"
            href="/project/100/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
      </div>
      <div
        className="sc-chPdSV hBnWHV"
>>>>>>> updated tests
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
    <div
      className="sc-bZQynM ceQpbG"
    >
      <div
        className="sc-htoDjs gGzkjf"
      >
        <div
          className="sc-gzVnrw dUJElp"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
